feat: Made chat component

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 :root {
 	--primary-color: #47CDFF;
+	--text-primary: #828a99;
+	--text-secondary: #585b61;
 	--background-primary: #313742;
 	--background-secondary: #39404d;
 	--background-tertiary: #383a3e;
