--- a/src/components/Chat/index.css
+++ b/src/components/Chat/index.css
@@ -1,4 +1,69 @@
 .chat {
-	background-color: var(--background-primary);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	flex: 1;
+	height: 100%;
+	max-height: 100%;
+	background-color: var(--background-primary);
+}
+
+.messages-wrapper {
+	display: flex;
+	flex-direction: column;
+	gap: 0.7rem;
+	margin-right: 1rem;
+	width: 90%;
+	height: 30rem;
+	overflow-y: scroll;
+}
+
+.messages-wrapper::-webkit-scrollbar {
+	width: 0.7rem;
+}
+
+.messages-wrapper::-webkit-scrollbar-thumb {
+	background-color: var(--primary-color);
+	border-radius: 0.7rem;
+}
+
+.messages-wrapper::-webkit-scrollbar-track {
+	background-color: var(--background-secondary);
+	border-radius: 0.7rem;
+}
+
+.message {
+	display: flex;
+	align-items: center;
+	gap: 0.5rem;
+}
+
+.message-picture {
+	object-fit: cover;
+	width: 2.5rem;
+	height: 2.5rem;
+	border-radius: 50%;
+}
+
+.message-sender {
+	font-size: 0.9rem;
+	font-weight: 600;
+	margin-bottom: 0.2rem;
+	color: var(--primary-color);
+}
+
+.message-content {
+	color: #fff;
+}
+
+.message-input {
+	background-color: var(--background-secondary);
+	color: var(--text-secondary);
+	border: none;
+	width: 90%;
+	height: 3rem;
+	margin: auto 0 1.5rem 0;
+	padding: 0 1rem 0 1rem;
+	border-radius: 0.5rem;
+	font-size: 1.3rem;
 }
