--- a/src/components/Chat/index.css
+++ b/src/components/Chat/index.css
@@ -3,8 +3,7 @@
 	flex-direction: column;
 	align-items: center;
 	flex: 1;
-	height: 100%;
-	max-height: 100%;
+	max-height: 100vh;
 	background-color: var(--background-primary);
 }
 
@@ -16,20 +15,6 @@
 	width: 90%;
 	height: 30rem;
 	overflow-y: scroll;
-}
-
-.messages-wrapper::-webkit-scrollbar {
-	width: 0.7rem;
-}
-
-.messages-wrapper::-webkit-scrollbar-thumb {
-	background-color: var(--primary-color);
-	border-radius: 0.7rem;
-}
-
-.messages-wrapper::-webkit-scrollbar-track {
-	background-color: var(--background-secondary);
-	border-radius: 0.7rem;
 }
 
 .message {
