--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,14 @@
 html, body {
 	font-family: sans-serif;
 	font-weight: 400;
-	height: 100%
+	max-height: 100%;
 }
 
 .page {
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
+	max-height: 100vh;
 }
 
 .blue-text {
@@ -32,4 +33,18 @@ html, body {
 	display: flex;
 	flex-direction: row;
 	flex: 1;
+}
+
+::-webkit-scrollbar {
+	width: 0.7rem;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: var(--primary-color);
+	border-radius: 0.7rem;
+}
+
+::-webkit-scrollbar-track {
+	background-color: var(--background-secondary);
+	border-radius: 0.7rem;
 }
