refactor: Rebuilt layout organization with grid instead of flex

--- a/src/components/Topbar/index.css
+++ b/src/components/Topbar/index.css
@@ -1,4 +1,7 @@
 .topbar {
+	grid-area: topbar;
+	display: flex;
+	align-items: center;
 	font-family: Tahoma, sans-serif;
 	font-size: 1.5rem;
 	background-color: var(--background-tertiary);
