--- a/src/components/Chat/index.css
+++ b/src/components/Chat/index.css
@@ -1,9 +1,10 @@
 .chat {
+	grid-area: chat;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	flex: 1;
-	max-height: 100vh;
+	width: 100%;
+	height: 100%;
 	background-color: var(--background-primary);
 }
 
@@ -56,4 +57,4 @@
 .message-input::placeholder {
 	color: var(--text-secondary);
 }
-}
+
