--- a/src/components/Sidebar/index.css
+++ b/src/components/Sidebar/index.css
@@ -1,10 +1,11 @@
 aside {
-	display: flex;
-	max-width: 20%;
-	height: 100vh;
-	max-height: 90vh;
+	grid-area: sidebar;
+	width: 100%;
+	max-width: 100%;
+	height: 100%;
 	overflow-x: hidden;
 	overflow-y: auto;
+	background-color: var(--background-secondary);
 }
 
 aside::-webkit-scrollbar-track {
@@ -59,6 +60,7 @@ aside::-webkit-scrollbar-track {
 	color: var(--primary-color);
 	font-size: 1.2rem;
 	margin-top: 1rem;
+	margin-bottom: 1rem;
 	cursor: pointer;
 	width: 4rem;
 	height: 2rem;
