--- a/src/components/Sidebar/index.css
+++ b/src/components/Sidebar/index.css
@@ -1,10 +1,20 @@
+.dummy-background {
+	position: absolute;
+	z-index: -1;
+	grid-area: sidebar;
+	width: 100%;
+	height: 100%;
+	background-color: var(--background-secondary);
+}
+
 aside {
+	position: relative;
 	grid-area: sidebar;
 	width: 100%;
 	max-width: 100%;
 	height: 100%;
 	overflow-x: hidden;
-	overflow-y: auto;
+	overflow-y: scroll;
 	background-color: var(--background-secondary);
 }
 
