--- a/src/components/Sidebar/index.css
+++ b/src/components/Sidebar/index.css
@@ -12,7 +12,7 @@ aside {
 	grid-area: sidebar;
 	width: 100%;
 	max-width: 100%;
-	height: 100%;
+	height: 100vh;
 	overflow-x: hidden;
 	overflow-y: scroll;
 	background-color: var(--background-secondary);
@@ -193,4 +193,10 @@ input[type="file"] {
 
 .selected {
 	background-color: var(--background-primary);
+}
+
+@media (max-width: 768px) {
+	aside {
+		width: 100vw !important;
+	}
 }
